* GD > Post Images, when using screenshots from custom fields, screenshots can now link to different URL value - ADDED * Iphone ratings sometimes not able to set rating if text size of rating makes the rating jump between lines when changed - FIXED

--- a/assets/css/partials/_widget_images.scss
+++ b/assets/css/partials/_widget_images.scss
@@ -49,13 +49,13 @@
 
       a.geodir-lightbox-image{
 
-        .fa-search-plus{
+        i,svg.svg-inline--fa{
           display: none;
         }
 
         &:hover{
 
-          .fa-search-plus{
+          i,svg.svg-inline--fa{
             display: block;
             text-rendering: auto;
             -webkit-font-smoothing: antialiased;
@@ -69,7 +69,7 @@
             padding-bottom: 20%;
           }
 
-          i.fa-search-plus{
+          i{
             font-size: 30px;
           }
 
